DE5485 - Load more spacing issues Cards flowed incorrectly on mobile sized screens. This is caused by a float issue and I've applied a clear to the left of every odd card.

--- a/_assets/stylesheets/_utilities.scss
+++ b/_assets/stylesheets/_utilities.scss
@@ -12,6 +12,10 @@
   .cards-2x-sm .card {
     float: left;
     max-width: 50%;
+
+    &:nth-child(odd) {
+      clear: left;
+    }
   }
 }
 
